--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,11 @@
 #
 #    pip-compile requirements.in
 #
-cffi==1.3.0               # via xattr
-lru-dict==1.1.2
-mpi4py==2.0.0
-numpy==1.10.1
+cffi==1.11.5               # via xattr
+mpi4py==3.1.5
+numpy==1.19.5
 pycparser==2.14           # via cffi
-scandir==1.1
-xattr==0.7.8
-bitarray==0.8.1
+scandir==1.10.0
+xattr==0.10.1
+bitarray==2.9.0
+future==0.18.3
